--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,15 +10,21 @@ main:
   - name: Posts
     url: '#posts'
     weight: 20
-  - name: Projects
-    url: '#projects'
+  # - name: Projects
+    # url: '#projects'
+    # weight: 30
+  # - name: Talks
+    # url: '#talks'
+    # weight: 40
+  # - name: Publications
+    # url: '#featured'
+    # weight: 50
+  - name: Tags
+    url: '/tags'
     weight: 30
-  - name: Talks
-    url: '#talks'
+  - name: Categories
+    url: '/categories'
     weight: 40
-  - name: Publications
-    url: '#featured'
-    weight: 50
   - name: Contact
     url: '#contact'
     weight: 60
